# OcularDiseaseClassification

./: README.md  ResNet_model.py  ViT_model.py  data.py  info.txt  main.py  model.py  plot.py  pyproject.toml  test.py  train.py
models/: ViT_model.pth
